First Half we have the 2 data gridviews working

--- a/Lab2/App.config
+++ b/Lab2/App.config
@@ -2,7 +2,8 @@
 <configuration>
 
 	<appSettings>
-		<add key="Connection" value="Data Source = DESKTOP-PBGUL9N\\MY_SQL_SERVICE;Initial Catalog=Library;Integrated Security=true"/>
+									
+		<add key="Connection" value="Data Source = DESKTOP-PBGUL9N\MY_SQL_SERVICE;Initial Catalog=Library;Integrated Security=true"/>
 		<add key ="ParentTable" value="Author"/>
 		<add key="ChildTable" value="Buecher"/>
 	</appSettings>
